getting rid of shortcuts/hacks 2 (global var imports)

--- a/src/cloudsc_loki_c/cloudsc_loki.config
+++ b/src/cloudsc_loki_c/cloudsc_loki.config
@@ -11,13 +11,19 @@ strict = true  # Throw exceptions during dicovery
 # TODO: Add type-bound procedure support and adjust scheduler to it
 disable = ['performance_timer%start', 'performance_timer%end', 'performance_timer%thread_start',
            'performance_timer%thread_end', 'performance_timer%thread_log',
-           'performance_timer%thread_log', 'performance_timer%print_performance']
+           'performance_timer%thread_log', 'performance_timer%print_performance'] # ,
+# 'jpim', 'jprb', 'state_type', 'rg', 'rd', 'rcpd', 'retv', 'rlvtt', 'rlstt', 'rlmlt', 'rtt', 'rv', 'r2es', 'r3les', 'r3ies', 'r4les', 'r4ies', 'r5les', 'r5ies', 'r5alvcp', 'r5alscp', 'ralvdcp', 'ralsdcp', 'ralfdcp', 'rtwat', 'rtice', 'rticecu', 'rtwat_rtice_r', 'rtwat_rticecu_r', 'rkoop1', 'rkoop2', 'tecldp', 'ncldqv', 'ncldql', 'ncldqr', 'ncldqi', 'ncldqs', 'nclv', 'foedelta', 'foealfa', 'foeewm', 'foeeice', 'foeeliq', 'foeldcp', 'foeldcpm', 'foedem', 'fokoop']
 
 # Define entry point for call-tree transformation
 [[routine]]
 name = 'cloudsc_driver'
 role = 'driver'
 expand = true
+
+[[routine]]
+name = 'cloudsc'
+role = 'kernel'
+# enable_imports = true
 
 [[dimension]]
 name = 'horizontal'
