FIELD_API fixes for single-precision

--- a/bundle.yml
+++ b/bundle.yml
@@ -90,9 +90,11 @@ options :
         cmake : CMAKE_TOOLCHAIN_FILE={{value}}
 
     - single-precision :
+        # Disabling DOUBLE_PRECISION only affects field_api
         help  : Enable single precision build of the dwarf
         cmake : >
             ENABLE_SINGLE_PRECISION=ON
+            ENABLE_DOUBLE_PRECISION=OFF
             FIELD_API_DEFINITIONS=SINGLE
 
     - with-gpu :
