--- a/src/cloudsc_loki_c/cloudsc_loki.config
+++ b/src/cloudsc_loki_c/cloudsc_loki.config
@@ -1,5 +1,9 @@
 derived_types = ['TECLDP']
 
+[dic2p]
+NLEV = 137
+KLEV = 137
+
 [default]
 # Specifies the behaviour of auto-expanded routines
 role = 'kernel'
