--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(common)
 # add_subdirectory(cloudsc_fortran)
 # add_subdirectory(cloudsc_c)
 add_subdirectory(cloudsc_loki_c)
+add_subdirectory(cloudsc_loki_c_modified)
 # add_subdirectory(cloudsc_cuda)
 # add_subdirectory(cloudsc_gpu)
 # add_subdirectory(cloudsc_loki)
