Introducing 'mix' versions, Fortran driver + OpenMP/OpenACC offload + CUDA/HIP/SYCL kernel implementation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,7 @@ add_subdirectory(cloudsc_fortran_atlas)
 add_subdirectory(cloudsc_pyiface)
 add_subdirectory(cloudsc_python)
 add_subdirectory(cloudsc_c)
+add_subdirectory(cloudsc_mix)
 add_subdirectory(cloudsc_cuda)
 add_subdirectory(cloudsc_hip)
 add_subdirectory(cloudsc_sycl)
