--- a/bundle.yml
+++ b/bundle.yml
@@ -70,6 +70,7 @@ options :
             ENABLE_CLOUDSC_GPU_SCC_HOIST=ON
             ENABLE_CLOUDSC_GPU_SCC_K_CACHING=ON
             ENABLE_CLOUDSC_GPU_OMP_SCC_HOIST=ON
+            ENABLE_CLOUDSC_GPU_OMP_SCC_HOIST_DR_LOOP=ON
 
     - with-cuda :
         help  : Enable GPU kernel variant based on CUDA-Fortran
