--- a/src/cloudsc_sycl_sp/CMakeLists.txt
+++ b/src/cloudsc_sycl_sp/CMakeLists.txt
@@ -9,12 +9,17 @@
 # Define this dwarf variant as an ECBuild feature
 ecbuild_add_option( FEATURE CLOUDSC_SYCL
     DESCRIPTION "Build the SYCL version CLOUDSC using Serialbox" DEFAULT ON
-    CONDITION (Serialbox_FOUND OR HDF5_FOUND) AND HAVE_SYCL
+    CONDITION Serialbox_FOUND AND HAVE_SYCL
 )
 
 if( HAVE_CLOUDSC_SYCL )
 
-    if ( NOT HAVE_SINGLE_PRECISION )
+    if ( HAVE_SINGLE_PRECISION )
+    # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -gline-tables-only -fopenmp -fsycl")
+    set(LINK_SYCL OFF)
+    if (NOT CMAKE_CXX_COMPILER_ID STREQUAL "NVHPC") 
+	    set(LINK_SYCL ON)
+    endif()
 
     ecbuild_add_library(
         TARGET dwarf-cloudsc-scc-sycl-lib
@@ -34,22 +39,14 @@ if( HAVE_CLOUDSC_SYCL )
             $<INSTALL_INTERFACE:include>
             $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/cloudsc>
         PUBLIC_LIBS
-            $<${HAVE_HDF5}:hdf5::hdf5>
-            $<${HAVE_SERIALBOX}:Serialbox::Serialbox_C>
-            $<${HAVE_OMP}:OpenMP::OpenMP_C>
-        DEFINITIONS
-            ${CLOUDSC_DEFINITIONS}
+	    $<$<BOOL:${LINK_SYCL}>:sycl>
+            Serialbox::Serialbox_C
+    	    $<${HAVE_OMP}:OpenMP::OpenMP_C>
     )
 
-    add_sycl_to_target(
-	    TARGET
-	    	dwarf-cloudsc-scc-sycl-lib
-	    SOURCES
-	    	cloudsc/cloudsc_c.kernel
-    )
 
     ecbuild_add_executable(
-        TARGET  dwarf-cloudsc-scc-sycl-sp
+        TARGET  dwarf-cloudsc-scc-sycl
         SOURCES dwarf_cloudsc.cpp
         LIBS dwarf-cloudsc-scc-sycl-lib
     )
@@ -82,22 +79,13 @@ if( HAVE_CLOUDSC_SYCL )
             $<INSTALL_INTERFACE:include>
             $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/cloudsc>
         PUBLIC_LIBS
-            $<${HAVE_HDF5}:hdf5::hdf5>
-            $<${HAVE_SERIALBOX}:Serialbox::Serialbox_C>
+            $<$<BOOL:${LINK_SYCL}>:sycl>
+	    Serialbox::Serialbox_C
             $<${HAVE_OMP}:OpenMP::OpenMP_C>
-        DEFINITIONS
-            ${CLOUDSC_DEFINITIONS}
-    )
-
-    add_sycl_to_target(
-	    TARGET
-	    	dwarf-cloudsc-scc-hoist-sycl-lib
-	    SOURCES
-	    	cloudsc/cloudsc_c_hoist.kernel
     )
 
     ecbuild_add_executable(
-        TARGET  dwarf-cloudsc-scc-hoist-sycl-sp
+        TARGET  dwarf-cloudsc-scc-hoist-sycl
         SOURCES dwarf_cloudsc.cpp
         LIBS dwarf-cloudsc-scc-hoist-sycl-lib
     )
@@ -130,22 +118,13 @@ if( HAVE_CLOUDSC_SYCL )
             $<INSTALL_INTERFACE:include>
             $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/cloudsc>
         PUBLIC_LIBS
-            $<${HAVE_HDF5}:hdf5::hdf5>
-            $<${HAVE_SERIALBOX}:Serialbox::Serialbox_C>
+            $<$<BOOL:${LINK_SYCL}>:sycl>
+	    Serialbox::Serialbox_C
             $<${HAVE_OMP}:OpenMP::OpenMP_C>
-        DEFINITIONS
-            ${CLOUDSC_DEFINITIONS}
-    )
-
-    add_sycl_to_target(
-	    TARGET 
-	    	dwarf-cloudsc-scc-k-caching-sycl-lib 
-	    SOURCES 
-	    	cloudsc/cloudsc_c_k_caching.kernel
     )
 
     ecbuild_add_executable(
-        TARGET  dwarf-cloudsc-scc-k-caching-sycl-sp
+        TARGET  dwarf-cloudsc-scc-k-caching-sycl
         SOURCES dwarf_cloudsc.cpp
         LIBS dwarf-cloudsc-scc-k-caching-sycl-lib
     )
@@ -158,19 +137,9 @@ if( HAVE_CLOUDSC_SYCL )
         OMP 1
     )
 
- # Create symlink for the input data
- if( HAVE_SERIALBOX )
-   execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
-       ${CMAKE_CURRENT_SOURCE_DIR}/../../data ${CMAKE_CURRENT_BINARY_DIR}/../../../data )
- endif()
-
- if( HAVE_HDF5 )
-   execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
-       ${CMAKE_CURRENT_SOURCE_DIR}/../../config-files/input.h5 ${CMAKE_CURRENT_BINARY_DIR}/../../../input.h5 )
-   execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
-       ${CMAKE_CURRENT_SOURCE_DIR}/../../config-files/reference.h5 ${CMAKE_CURRENT_BINARY_DIR}/../../../reference.h5 )
- endif()
-
+    # Create symlink for the input data
+    execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+        ${CMAKE_CURRENT_SOURCE_DIR}/../../data ${CMAKE_CURRENT_BINARY_DIR}/../../../data )
 endif()
 else()
 	ecbuild_info( "Serialbox not found, disabling SYCL version" )
