--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,5 +16,6 @@ add_subdirectory(cloudsc_c)
 add_subdirectory(cloudsc_cuda)
 add_subdirectory(cloudsc_hip)
 add_subdirectory(cloudsc_sycl)
+add_subdirectory(cloudsc_sycl_sp)
 add_subdirectory(cloudsc_gpu)
 add_subdirectory(cloudsc_loki)
